--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
-- name: 'gcr.io/google-appengine/openjdk:8'
-images: 
-- 'gcr.io/google-appengine/openjdk:8'
-timeout: 3600s
+  - name: 'gcr.io/cloud-builders/docker'
+    args: ['build', '-t', 'gcr.io/divine-turbine-261911/metabase', '.']
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['app', 'deploy']
+options:
+  timeout: "3600s"
