--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,5 +3,4 @@ steps:
     args: ['build', '-t', 'gcr.io/divine-turbine-261911/metabase', '.']
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
-options:
-  timeout: "3600s"
+timeout: 3600s
