--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build','builds', '-t', 'gcr.io/divine-turbine-261911/metabase', '.']
+    args: ['build', '-t', 'gcr.io/divine-turbine-261911/metabase', '.']
   - name: 'gcr.io/cloud-builders/gcloud'
     args: ['app', 'deploy']
 timeout: 1800s
