--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,8 @@
 steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/divine-turbine-261911/metabase', '.']
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args: ['app', 'deploy']
-timeout: 1800s
+- name: 'gcr.io/cloud-builders/docker'
+  script: |
+    docker build -t europe-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/metabase/metabase .
+  automapSubstitutions: true
+images:
+- 'europe-west1-docker.pkg.dev/$PROJECT_ID/cloud-run-source-deploy/metabase/metabase'
+timeout: 3600
